Planting thoughts to CSS design in comments

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </p>
     </section>
 
-    <nav id="navbar">
+    <nav id="navbar"> <!-- Thinking of stretching this part to cover the whole width of the page -->
         <a href="./index.html">Home</a> |
         <a href="./template.html"> Topic</a> |
         <a href="./research.html">Research</a> |
