--- a/research.html
+++ b/research.html
@@ -19,7 +19,7 @@
         </p>
     </section>
 
-    <section id="content_area">
+    <section id="content_area"> <!-- Might be nice to place it in a box of its own-->
         <h2>Content Areas</h2>
 
         <p>This lesson will help you learn to acquire research resources through a review of the following areas:</p>
@@ -163,7 +163,7 @@
             </li>
         </ul>
 
-        <div class="sidebar">
+        <div class="sidebar"> <!-- Thinking of making every sidebar looking like a sticky note and placing it to the side of what ever it is at -->
             <h3>Being Realistic</h3>
 
             <p>
@@ -349,7 +349,7 @@
         <p>If you plan on visiting an I-Share library to obtain your resource, consider the following:</p>
 
         <div class="sidebar">
-            <!-- Planning to move this side-by-side with the list, so for now it looks like it is disrupting the list instead-->
+            <!-- Planning to move this side-by-side with the list, so for now it looks like it is disrupting the list instead -->
             <h3>Being Realistic</h3>
 
             <p>
