Started on styling

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset="utf-8" />
+    <link href="./styles/stylesheet.css" rel="stylesheet" />
     <title>Research Paper Toolbox</title>
 </head>
 
 <body>
     <h1>Research Paper Toolbox</h1>
-    <section>
+    <section id="homepage">
         <p>
             Constructing a research paper is an integral part of being a graduate student in the Information
             Architecture,
@@ -31,14 +32,14 @@
     </section>
 
     <nav id="navbar"> <!-- Thinking of stretching this part to cover the whole width of the page -->
-        <a href="./index.html">Home</a> |
-        <a href="./template.html"> Topic</a> |
-        <a href="./research.html">Research</a> |
-        <a href="./data.html">Data</a> |
-        <a href="./template.html">References</a> |
-        <a href="./template.html">Style</a> |
-        <a href="./template.html">Layout</a> |
-        <a href="./template.html">Modality</a> |
+        <a href="./index.html">Home</a> 
+        <a href="./template.html"> Topic</a> 
+        <a href="./research.html">Research</a> 
+        <a href="./data.html">Data</a> 
+        <a href="./template.html">References</a> 
+        <a href="./template.html">Style</a> 
+        <a href="./template.html">Layout</a> 
+        <a href="./template.html">Modality</a> 
         <a href="./template.html">Professionalization</a>
     </nav>
 </body>
