--- a/research.html
+++ b/research.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="utf-8" />
+    <link href="./styles/stylesheet.css" rel="stylesheet" />
     <title>Realistic Research: University, Web-based, and Local Resources</title>
+    
 </head>
 
 <body>
