--- a/data.html
+++ b/data.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
+    <link href="./styles/stylesheet.css" rel="stylesheet" />
     <title>How to organize and analyze research data</title>
 </head>
 
@@ -12,7 +13,7 @@
 
     <section>
 
-        <div class="sidebar"> <!-- This div will be a sidebar, I'm thinking of placing it on the right margin -->
+        <aside>
             <p>For this lesson, you need the following:</p>
             <ul>
                 <li>Microsoft Excel</li>
@@ -25,7 +26,7 @@
                 <li><strong>Descriptive statistics</strong> and <b>inferential statistics</b></li>
                 <li>Research design and how to identify <b>independent variables</b> and <b>dependent variables</b></li>
             </ul>
-        </div>
+        </aside>
 
         <p>
             This short lesson is intended for graduate and advanced undergraduate students undertaking original research
@@ -110,14 +111,14 @@
             researcher maximum flexibility in testing for relationships or correlations.
         </p>
 
-        <div class="sidebar">
+        <aside>
             <p>
                 Dichotomous variables allow for the easy isolation of characteristics for analysis. For example,
                 separating experience levels allows the researcher to test in PASW whether subjects with low experience
                 have perceived ease of use scores significantly different from those with medium and high experience
                 levels.
             </p>
-        </div>
+        </aside>
 
         <ol>
             <li>Copy the Raw_Dataset values into the Sheet2 tab. Rename this sheet Formatted_Data.</li>
@@ -153,11 +154,11 @@
     <section>
         <h2>Run descriptive statistics</h2>
 
-        <div class="sidebar">
+        <aside>
             Analyzing descriptive statistics may lead you to ask new questions. For example, perc_enjoy is much higher
             on average than perc_usefulness, which also has a large variance. This suggests that a segment of users may
             not have considered the system useful even though they enjoyed using it.
-        </div>
+        </aside>
 
         <p>
             Run descriptive (summary) statistics on the dataset and output results in a new spreadsheet. If necessary,
@@ -255,14 +256,14 @@
             perc_usefulness between free_play and other tutorial types.
         </p>
 
-        <div class="sidebar">
+        <aside>
             <p>
                 Consult UCLA's
                 <a href="http://www.ats.ucla.edu/stat/mult_pkg/whatstat/default.htm">Choosing the Correct Statistic</a>
                 to ensure the statistical anlaysis is appropriate for your research question(s), variables of interest,
                 and associated data types.
             </p>
-        </div>
+        </aside>
 
         <p>
             You should have determined that the Kruskal-Wallis one-way analysis of variance is the appropriate test. Go
