--- a/template.html
+++ b/template.html
@@ -3,6 +3,10 @@
 
 <head>
     <meta charset="utf-8" />
+    <link href="./styles/stylesheet.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <title>Insert title</title>
 </head>
 
@@ -24,7 +28,7 @@
             anim id est laborum.
         </p>
 
-        <div class="sidebar">
+        <aside>
             <h3>Sidebar heading</h3>
 
             <p>
@@ -34,7 +38,7 @@
                 fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
                 deserunt mollit anim id est laborum.
             </p>
-        </div>
+        </aside>
     </section>
 </body>
 
