--- a/research.html
+++ b/research.html
@@ -168,7 +168,7 @@
             </li>
         </ul>
 
-        <div class="sidebar"> <!-- Thinking of making every sidebar looking like a sticky note and placing it to the side of what ever it is at -->
+        <aside> <!-- Thinking of making every sidebar looking like a sticky note and placing it to the side of what ever it is at -->
             <h3>Being Realistic</h3>
 
             <p>
@@ -176,7 +176,7 @@
                 wasting your precious time if you try to obtain resources that you can't possibly hope to read within
                 your research timeline.
             </p>
-        </div>
+        </aside>
 
         <!-- Not sure if using h3 is better here or should I just bold it. Open for thoughts! -->
         <h3>Case Study: Example of a Research Timeline</h3>
@@ -297,7 +297,7 @@
             results, the next step is to search for your book in <strong>WorldCat</strong>.
         </p>
 
-        <div class="sidebar">
+        <aside>
             <h3>Being Realistic</h3>
 
             <p>
@@ -305,7 +305,7 @@
                 will be able to find them again using past searches. Keep a list of resources on Google Documents or on
                 your flash drive.
             </p>
-        </div>
+        </aside>
 
         <p>
             If you are confused when using any of the library systems, you can always refer back to the Library FAQ and
@@ -353,7 +353,7 @@
 
         <p>If you plan on visiting an I-Share library to obtain your resource, consider the following:</p>
 
-        <div class="sidebar">
+        <aside>
             <!-- Planning to move this side-by-side with the list, so for now it looks like it is disrupting the list instead -->
             <h3>Being Realistic</h3>
 
@@ -361,7 +361,7 @@
                 Don't waste your research time by making the trip to a library only to find out it is closed for break
                 or you are not allowed to browse the stacks as a non-student. When in doubt, call first.
             </p>
-        </div>
+        </aside>
 
         <ul>
             <li>
