--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 </head>
 
 <body>
-    <h1>Research Paper Toolbox</h1>
+    <div class="header">
+        <h1>Research Paper Toolbox</h1>
+    </div>
+    
     <section id="homepage">
         <p>
             Constructing a research paper is an integral part of being a graduate student in the Information
