--- a/research.html
+++ b/research.html
@@ -12,8 +12,10 @@
 </head>
 
 <body>
-    <a href="./index.html">Home</a>
-    <h1>Realistic Research: University, Web-based, and Local Resources</h1>
+    <div class="header">
+        <h1>Realistic Research: University, Web-based, and Local Resources</h1>
+        <a href="./index.html">Home</a>
+    </div>
 
     <section>
         <p>
@@ -24,14 +26,14 @@
         </p>
     </section>
 
-    <section id="content_area"> <!-- Might be nice to place it in a box of its own-->
+    <section id="table_of_contents"> <!-- Might be nice to place it in a box of its own-->
         <h2>Content Areas</h2>
 
         <p>This lesson will help you learn to acquire research resources through a review of the following areas:</p>
 
         <ul>
             <li>
-                Getting Started
+                <strong>Getting Started</strong>
                 <ul>
                     <li>Learn how to access IIT library services</li>
                     <li>Learn basic functionality on the IIT library website</li>
@@ -39,7 +41,7 @@
             </li>
 
             <li>
-                Research Timelines
+                <strong>Research Timelines</strong>
                 <ul>
                     <li>Learn how to formulate a timeline</li>
                     <li>Learn how to use your timeline to determine the best way to obtain resources</li>
@@ -47,7 +49,7 @@
             </li>
 
             <li>
-                Requesting Resources
+                <strong>Requesting Resources</strong>
                 <ul>
                     <li>Learn how to request articles from other libraries</li>
                     <li>Learn how to request books from other libraries</li>
@@ -55,7 +57,7 @@
             </li>
 
             <li>
-                Local Libraries
+                <strong>Local Libraries</strong>
                 <ul>
                     <li>Learn how to access local libraries</li>
                     <li>Learn when to utilize local libraries over interlibrary loan</li>
@@ -63,7 +65,7 @@
             </li>
 
             <li>
-                Finding Resources on the Web
+                <strong>Finding Resources on the Web</strong>
                 <ul>
                     <li>Review web-based research tools and their uses</li>
                 </ul>
@@ -103,7 +105,7 @@
         </p>
 
         <figure>
-            <img src="./illustrations/research2.jpg" alt="TBA" />
+            <img src="./illustrations/research2.jpg" alt="Illustration of the Library Resources icon located on the library website" />
             <figcaption>
                 The Library Services icon leads you to the library search website.
             </figcaption>
@@ -148,7 +150,7 @@
         <ul>
             <li>
                 <strong>Time to obtain resource</strong>: How long will it take for the resource to arrive via
-                interlibrary loan? -or- How long will it take for you to physically obtain the resource?
+                interlibrary loan? -<em>or</em>- How long will it take for you to physically obtain the resource?
             </li>
             <li>
                 <strong>Time to read resource</strong>: How long will it take you to read the book or article? Are you
@@ -266,7 +268,7 @@
         </p>
 
         <figure>
-            <img src="./illustrations/research4_image1.jpg" alt="TBA" />
+            <img src="./illustrations/research4_image1.jpg" alt="Illustration of an article with no download to .pdf option" />
         </figure>
 
         <p>
@@ -276,7 +278,7 @@
         </p>
 
         <figure>
-            <img src="./illustrations/research4_image2.jpg" alt="TBA" />
+            <img src="./illustrations/research4_image2.jpg" alt="Example illustration of the website you are taken to after clicking Get Article" />
             <figcaption>For this resource, the only option is to request the article through MyILL</figcaption>
         </figure>
 
@@ -317,7 +319,7 @@
 
         <p>
             Bridgette receives the articles that she has requested and reads through them. One of the resources that
-            Jane finds quoted often in academic papers is the 1923 text English for Engineers written by S. A.
+            Jane finds quoted often in academic papers is the 1923 text <em>English for Engineers</em> written by S. A.
             Harbarger. She decides that this is a useful resource to examine for her project, and makes a note of the
             title, author, and year in her Google Docs list of resources that she is compiling. After a quick search in
             I-Share, she notices that it is available at the University of Illinois library in Chicago; she makes a note
@@ -403,7 +405,7 @@
 
         <p>
             After finishing another project, Bridgette returns to her research paper on Tech Comm prior to World War II.
-            She notices that she had made a note to obtain English for Engineers by S. A. Harbarger, but that was over a
+            She notices that she had made a note to obtain <em>English for Engineers</em> by S. A. Harbarger, but that was over a
             week ago and she now only has ten days left to finish her paper. She decides to reassess her research
             timeline and concludes that she has enough time to read, analyze, and incorporate important elements of this
             resource into her paper, but in order to do so, she must have the resource and begin working immediately.
