--- a/template.html
+++ b/template.html
@@ -11,9 +11,10 @@
 </head>
 
 <body>
-    <a href="./index.html">Home</a>
-    
-    <h1>Main header</h1>
+    <div class="header">
+        <h1>Main header</h1>
+        <a href="./index.html">Home</a>
+    </div>
 
     <section>
         <h2>Section heading</h2>
