HTML validation checks

--- a/data.html
+++ b/data.html
@@ -2,8 +2,8 @@
 <html lang="en-US">
 
 <head>
-    <meta charset="utf-8" />
-    <link href="./styles/stylesheet.css" rel="stylesheet" />
+    <meta charset="utf-8">
+    <link href="./styles/stylesheet.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
         <a href="./index.html">Home</a>
     </div>
     
-    <section>
+    <div class="intro">
 
         <aside>
             <p>For this lesson, you need the following:</p>
@@ -45,7 +45,7 @@
             <li>Prepare the document for statistical analysis in the software package PASW</li>
         </ul>
 
-    </section>
+    </div>
 
     <section>
         <h2>Format data for analysis</h2>
@@ -74,7 +74,7 @@
 
         <figure>
             <img src="./illustrations/datalesson_fig3.png"
-                alt="Illustration of the expected spreadsheet after the changes." />
+                alt="Illustration of the expected spreadsheet after the changes.">
             <!-- I think there's a mistake in the copy, this should've been figure 1 but there is no illustration of it so I'll leave it as is for the meantime -->
             <figcaption>
                 Tutorial type, gender, experience, and task categorical values have been formatted as
@@ -105,7 +105,7 @@
 
         <figure>
             <img src="./illustrations/datalesson_fig2.png"
-                alt="Illustration of the expected spreadsheet after the recent changes." />
+                alt="Illustration of the expected spreadsheet after the recent changes.">
             <figcaption>Values for each variable are entered in a consistent format.</figcaption>
         </figure>
 
@@ -147,7 +147,7 @@
 
         <figure>
             <img src="./illustrations/datalesson_fig3.png"
-                alt="Illustration of the expected spreadsheet after the above changes." />
+                alt="Illustration of the expected spreadsheet after the above changes.">
             <figcaption>
                 Tutorial type, gender, experience, and task categorical values have been formatted as
                 dichotomous variables.
@@ -203,7 +203,7 @@
 
         <figure>
             <img src="./illustrations/datalesson_fig4.png"
-                alt="Illustration of the expected descriptive statistic summary" />
+                alt="Illustration of the expected descriptive statistic summary">
             <figcaption>
                 Excel will not run descriptive statistics with non-numeric characters, so the variable labels must be
                 re-entered.
@@ -248,7 +248,7 @@
 
         <figure>
             <img src="./illustrations/datalesson_fig5.png"
-                alt="Illustration of the different statistical methods and test available within the Analyze tab" />
+                alt="Illustration of the different statistical methods and test available within the Analyze tab">
             <figcaption>
                 Don't assume PASW doesn't run a given test. Many are located under broader statistical classifications.
             </figcaption>
@@ -296,7 +296,7 @@
 
         <figure>
             <img src="./illustrations/datalesson_fig6.png"
-                alt="Illustration of the selection menu after assigning the respective variabes as instructed above" />
+                alt="Illustration of the selection menu after assigning the respective variabes as instructed above">
             <figcaption>
                 For Kruskal-Wallis, an independent (free_play) and a dependent variable (perc_usefulness) are selected.
             </figcaption>
@@ -312,7 +312,7 @@
 
         <figure>
             <img src="./illustrations/datalesson_fig7.png"
-                alt="Illustration of a table containing the outputs of the statistical tests" />
+                alt="Illustration of a table containing the outputs of the statistical tests">
             <figcaption>
                 PASW allows users to export statistics to common document types.
             </figcaption>
