--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en-US">
 
 <head>
-    <meta charset="utf-8" />
-    <link href="./styles/stylesheet.css" rel="stylesheet" />
+    <meta charset="utf-8">
+    <link href="./styles/stylesheet.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
         <h1>Research Paper Toolbox</h1>
     </div>
     
-    <section id="homepage">
+    <div id="homepage">
         <p>
             Constructing a research paper is an integral part of being a graduate student in the Information
             Architecture,
@@ -35,7 +35,7 @@
             even if you are an experienced writer, you can still refresh your knowledge with one or more lessons.
             To begin, choose a lesson by clicking one of the modules below.
         </p>
-    </section>
+    </div>
 
     <nav id="navbar"> <!-- Thinking of stretching this part to cover the whole width of the page -->
         <a href="./index.html">Home</a> 
