--- a/research.html
+++ b/research.html
@@ -2,8 +2,8 @@
 <html lang="en-US">
 
 <head>
-    <meta charset="utf-8" />
-    <link href="./styles/stylesheet.css" rel="stylesheet" />
+    <meta charset="utf-8">
+    <link href="./styles/stylesheet.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
@@ -17,14 +17,14 @@
         <a href="./index.html">Home</a>
     </div>
 
-    <section>
+    <div class="intro">
         <p>
             This lesson is meant for students who must begin research in their first semester of the TCID, IA, or the
             Ph.D. in Technical Communication program who want to develop, improve, or refresh their research skills.
             Additionally, this lesson is designed to give students strategies which will help them research more
             efficiently.
         </p>
-    </section>
+    </div>
 
     <section id="table_of_contents"> <!-- Might be nice to place it in a box of its own-->
         <h2>Content Areas</h2>
@@ -105,7 +105,7 @@
         </p>
 
         <figure>
-            <img src="./illustrations/research2.jpg" alt="Illustration of the Library Resources icon located on the library website" />
+            <img src="./illustrations/research2.jpg" alt="Illustration of the Library Resources icon located on the library website">
             <figcaption>
                 The Library Services icon leads you to the library search website.
             </figcaption>
@@ -141,7 +141,7 @@
         </p>
 
         <p>
-            <strong>Time to obtain resource + Time to read resource + Time to integrate resource into your project <
+            <strong>Time to obtain resource + Time to read resource + Time to integrate resource into your project &lt;
                     Remaining time before deadline</strong>
         </p>
 
@@ -268,7 +268,7 @@
         </p>
 
         <figure>
-            <img src="./illustrations/research4_image1.jpg" alt="Illustration of an article with no download to .pdf option" />
+            <img src="./illustrations/research4_image1.jpg" alt="Illustration of an article with no download to .pdf option">
         </figure>
 
         <p>
@@ -278,7 +278,7 @@
         </p>
 
         <figure>
-            <img src="./illustrations/research4_image2.jpg" alt="Example illustration of the website you are taken to after clicking Get Article" />
+            <img src="./illustrations/research4_image2.jpg" alt="Example illustration of the website you are taken to after clicking Get Article">
             <figcaption>For this resource, the only option is to request the article through MyILL</figcaption>
         </figure>
 
