--- a/template.html
+++ b/template.html
@@ -2,8 +2,8 @@
 <html lang="en-US">
 
 <head>
-    <meta charset="utf-8" />
-    <link href="./styles/stylesheet.css" rel="stylesheet" />
+    <meta charset="utf-8">
+    <link href="./styles/stylesheet.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
@@ -40,6 +40,12 @@
                 deserunt mollit anim id est laborum.
             </p>
         </aside>
+
+        <figure>
+            <img src="./illustrations/placeholder_image.jpg"
+                alt="Insert description">
+            <figcaption>Bottom text.</figcaption>
+        </figure>
     </section>
 </body>
 
