Final touch ups

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </p>
     </div>
 
-    <nav id="navbar"> <!-- Thinking of stretching this part to cover the whole width of the page -->
+    <nav id="navbar">
         <a href="./index.html">Home</a> 
         <a href="./template.html"> Topic</a> 
         <a href="./research.html">Research</a> 
