--- a/research.html
+++ b/research.html
@@ -26,7 +26,7 @@
         </p>
     </div>
 
-    <section id="table_of_contents"> <!-- Might be nice to place it in a box of its own-->
+    <section class="table_of_contents">
         <h2>Content Areas</h2>
 
         <p>This lesson will help you learn to acquire research resources through a review of the following areas:</p>
